Support scoped streams and use scope. Remove reliance on hard-coded stream IDs